@@ -292,7 +292,11 @@ public class InventoryViewModel extends BaseViewModel {
 
   public void onBarcodeRecognized(String barcode) {
     if (formData.getProductDetailsLive().getValue() != null) {
-      formData.getBarcodeLive().setValue(barcode);
+      if (ProductBarcode.getFromBarcode(barcodes, barcode) == null) {
+        formData.getBarcodeLive().setValue(barcode);
+      } else {
+        showMessage(R.string.msg_clear_form_first);
+      }
       return;
     }
     Product product = null;
@@ -308,11 +312,9 @@ public class InventoryViewModel extends BaseViewModel {
       return;
     }
     if (product == null) {
-      for (ProductBarcode code : barcodes) {
-        if (code.getBarcode().equals(barcode)) {
-          product = Product.getProductFromId(products, code.getProductIdInt());
-        }
-      }
+      ProductBarcode productBarcode = ProductBarcode.getFromBarcode(barcodes, barcode);
+      product = productBarcode != null
+          ? Product.getProductFromId(products, productBarcode.getProductIdInt()) : null;
     }
     if (product != null) {
       setProduct(product.getId());
